// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LaunchMissionIds render IDs with multiple ids 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    IDs: id1, id2
  </p>
</DocumentFragment>
`;

exports[`LaunchMissionIds renders 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    ID: id1
  </p>
</DocumentFragment>
`;
